@@ -25,16 +25,6 @@ CGUIDialogContextMenu::CGUIDialogContextMenu(void)
 CGUIDialogContextMenu::~CGUIDialogContextMenu(void)
 {}
 
-bool CGUIDialogContextMenu::OnAction(const CAction &action)
-{
-  if (action.wID == ACTION_CLOSE_DIALOG || action.wID == ACTION_PREVIOUS_MENU)
-  {
-    Close();
-    return true;
-  }
-  return CGUIDialog::OnAction(action);
-}
-
 bool CGUIDialogContextMenu::OnMessage(CGUIMessage &message)
 {
   if (message.GetMessage() == GUI_MSG_CLICKED)
