@@ -17,16 +17,6 @@ CGUIDialogMusicOSD::~CGUIDialogMusicOSD(void)
 {
 }
 
-bool CGUIDialogMusicOSD::OnAction(const CAction &action)
-{
-  if (action.wID == ACTION_PREVIOUS_MENU || action.wID == ACTION_CLOSE_DIALOG)
-  {
-    Close();
-    return true;
-  }
-  return CGUIDialog::OnAction(action);
-}
-
 bool CGUIDialogMusicOSD::OnMessage(CGUIMessage &message)
 {
   switch (message.GetMessage())
