@@ -27,11 +27,6 @@ bool CGUIDialogVolumeBar::OnAction(const CAction &action)
     ResetTimer();
     return true;
   }
-  if (action.wID == ACTION_CLOSE_DIALOG || action.wID == ACTION_PREVIOUS_MENU)
-  {
-    Close();
-    return true;
-  }
   return CGUIDialog::OnAction(action);
 }
 
